To avoid repetition and improve readability, edit the first selector to apply the width rule to all images, the delete the remaining 3 selectors so that the one can be used instead

--- a/style.css
+++ b/style.css
@@ -110,21 +110,10 @@ button{
     justify-content: space-around;
 }
 
-.parttwo .images [id="1"]{
+.parttwo .images [id="1"], [id="2"],  [id="3"],  [id="4"]{
     width: 17%;
 }
 
-.parttwo .images [id="2"]{
-    width: 17%;
-}
-
-.parttwo .images [id="3"]{
-    width: 17%;
-}
-
-.parttwo .images [id="4"]{
-    width: 17%;
-}
 .parttwo p{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
